<resources>
    <string name="app_name">JobsResearch</string>
    <string name="login">Connexion</string>
    <array name="secteur">
        <item>Selectionner votre secteur</item>
        <item>ACHATS</item>
        <item>ADMINISTRATION</item>
        <item>ADMINISTRATIONDESVENTES</item>
        <item>AFFAIRESREGLEMENTAIRES</item>
        <item>ANALYSEFINANCIERE</item>
        <item>ANALYSTE PROGRAMMEUR,</item>
        <item>ARCHITECTE</item>
        <item>AREA MANAGER</item>
        <item>ASSISTANTCOMMERCIALETS</item>
        <item>ASSURANCEQUALITE</item>
        <item>AUDIT</item>
        <item>AUDITEXTERNE</item>
        <item>AUDITINTERNE</item>
    </array>
    <array name="contrat">
        <item>Type de contrat</item>
        <item>CDI</item>
        <item>CDD</item>
        <item>Intérim</item>
        <item>Contratuel</item>
        <item>Statuaire</item>
        <item>Avis de concours</item>
        <item>Independant/Freelance</item>
        <item>Alternance</item>
    </array>

    <string name="text_choice_secteur">Selectionner votre secteur</string>
    <string name="text_choice_contrat">Type de contrat</string>


    <string name="title_activity_">Activity</string>


    <string name="main_activity_description">Publier une offre,postuler
        à une offre et communiquez tout simplement</string>


    <string name="chat_with_mentor">Discute avec un mentor</string>


    <!-- MAIN ACTIVITY -->
    <string name="error_not_connected">Vous devez vous connecter !</string>
    <string name="error_authentication_canceled">Authentification annulée&#8230;</string>
    <string name="error_no_internet">Aucune connexion internet !</string>
    <string name="error_unknown_error">Une erreur inconnue s\'est produite&#8230;</string>
    <string name="connection_succeed">Authentification réussie !</string>
    <string name="button_login_text_logged">Afficher le profil</string>
    <string name="button_login_text_not_logged">Connexion</string>

    <!-- LOGIN ACTIVITY -->
    <string name="toolbar_title_login_activity">Votre Profil</string>
    <string name="text_input_username">Nom d\'utilisateur</string>
    <string name="text_view_email">Adresse email :</string>
    <string name="button_update_account">Mettre à jour le nom d\'utilisateur</string>
    <string name="button_open_demandeur_or_recruteur_activity">Allez à l\'accueil</string>
    <string name="button_delete_account">Supprimer mon compte</string>
    <string name="button_sign_out_account">Déconnexion</string>
    <string name="info_no_email_found">Auncune adresse email</string>
    <string name="info_no_username_found">Aucun nom d\'utilisateur</string>
    <string name="popup_message_confirmation_delete_account">Es-tu sûr(e) de vouloir supprimer ton compte ?</string>
    <string name="popup_message_confirmation_login">Connectez-vous avant de continuer ?</string>
    <string name="popup_message_confirmation_logout_account">Es-tu sûr(e) de vouloir de déconnecter</string>
    <string name="popup_message_choice_yes">Oui !</string>
    <string name="popup_message_choice_no">Non</string>
    <string name="check_box_is_recruiter">Etes-vous un recruteur ?</string>
    <string name="title_activity_recruiter">RecruiterActivity</string>


    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">676619866048380</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb676619866048380</string>

    <!-- CV ACTIVITY -->
    <string name="button_add_cv">Enregistrez</string>
    <string name="button_update_cv">Modifier</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="action_login">Se connecter</string>
    <string name="action_logout">Se deconnecter</string>
    <string name="action_add_cv">Créez votre cv</string>
    <string name="action_update_cv">Modifier votre cv</string>
    <string name="action_search">Rechercher</string>
    <string name="action_delete">Supprimer mon compte</string>

    //ACCUEIL

    <string name="text_acueil">Vous êtes un</string>

    <!-- MENTOR_CHAT ACTIVITY -->
    <string name="toolbar_title_mentor_chat_activity">Chats de discussions</string>
    <string name="text_input_title_mentor_chat_activity">Composer votre message</string>
    <string name="button_title_mentor_chat_activity">ENVOYER</string>
    <string name="text_view_mentor_chat_error">Ce fil de discussion ne contient pour le moment aucun message&#8230;</string>
    <string name="popup_title_permission_files_access">Cette application a besoin de permission pour fonctionner.</string>
    <string name="toast_title_no_image_chosen">Aucune image choisie&#8230;</string>


</resources>
