<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/searchitem"
        android:title="@string/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:defaultQueryHint="Search.."
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/addcvitem"
        android:orderInCategory="100"
        android:title="@string/action_add_cv"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/updatecvitem"
        android:orderInCategory="100"
        android:title="@string/action_update_cv"
        android:showAsAction="never"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/logoutitem"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        android:showAsAction="never"
        tools:ignore="AppCompatResource"
         />
    <item
        android:id="@+id/deleteitem"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        android:showAsAction="never"
        tools:ignore="AppCompatResource"
         />



</menu>